message for headings

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus voluptatum magnam ad at quae eum ex. Necessitatibus eligendi accusamus nemo, corporis ad molestiae, ullam cupiditate totam, assumenda inventore adipisci excepturi?</p>
+
+    <h1>Document</h1>
+    <h3>Lorem ipsum dolor sit amet.</h3>
+    <h3>Facilis magnam repellat aliquid sapiente.</h3>
+    <h3>Veniam in voluptatum laudantium iste.</h3>
+    <h3>Natus ex velit nobis autem.</h3>
+    <h3>Quis deserunt fugit rerum non?</h3>
 </body>
 </html>
